# ml-orchestrator

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  Makefile  README.md  main.py  mypy.ini  pyproject.toml  renovate.json
.github/workflows/: ci.yml  code-checks.yml  codecov.yml  copilot-setup-steps.yml  docs.yml  iso_test.yml  parsing-checks.yml  publish.yml
docs/source/: api_reference.rst  components.rst  conf.py  contributing.rst  environment.rst  index.rst  introduction.rst  ml_orchestrator.rst  usage.rst
doctrees/: api_reference.doctree  components.doctree  contributing.doctree  environment.doctree  environment.pickle  index.doctree  introduction.doctree  usage.doctree
dummy_components/: __init__.py  dummy_components.py  dummy_components_v2.py  invalid_protocol_components.py  protocol_components.py
dummy_components/parsed_components/: false_t_comps2.py  only_function_t_comps1.py  only_function_t_comps2.py  only_function_t_comps3.py  with_decorator_t_comps1.py  with_decorator_t_comps2.py  with_decorator_t_comps3.py
dummy_components/parsed_components/parsed_dummies_components/: base_component_test_a.py  base_component_test_b.py  base_component_test_c.py  base_component_test_c2.py  base_component_test_c3.py  base_component_with_mandatory_param.py  base_component_with_mandatory_param_b.py  base_componenttesta.py  base_componenttestb.py  base_componenttestc.py  base_componenttestc2.py  base_componenttestc3.py  base_componenttestd.py  base_componenttestd2.py  base_componenttestd2v2.py  base_metacomponenttest.py
html/: .buildinfo  api_reference.html  components.html  contributing.html  environment.html  genindex.html  index.html  introduction.html  objects.inv  search.html  searchindex.js  usage.html
html/_modules/: index.html
html/_modules/ml_orchestrator/: comp_parser.html  env_params.html  meta_comp.html
html/_modules/ml_orchestrator/comp_protocol/: func_parser.html
html/_sources/: components.rst.txt  index.rst.txt  introduction.rst.txt
ml_orchestrator/: __init__.py  comp_parser.py  compute_params.py  env_params.py  meta_comp.py  operation.py
ml_orchestrator/artifacts/: __init__.py  artifact.py  artifacts.py  notations.py
ml_orchestrator/comp_protocol/: __init__.py  base_parser.py  comp_protocol.py  func_parser.py  t_suites.py
ml_orchestrator/utils/: __init__.py  field_utils.py
pykfp/: env_params.py  operation.py
pykfp/artifacts/: __init__.py  artifact.py
pykfp/utils/: field_utils.py
tests/: conftest.py  dummy_components.py  test_aritfacts.py  test_create_func.py  test_field_parse.py  test_func_parse.py  test_meta_comp.py  test_operation.py  test_protocol.py  test_suites.py  test_write.py  test_write_to_file.py
tests/artifacts/: test_aritfacts.py
tests/comp_protocol/: test_func_parse.py
tests/docs/: test_docs.py
tests/test_dummies/: conftest.py  test_create_func.py  test_dec.py  test_suites.py  test_write_to_file.py
tests/test_iso/: test_iso.py
