[project]
name = "ml-orchestrator"
dynamic = ["version"]
description = "kubeflow extension"
authors = [
    { name = "DanielAvdar", email = "66269169+DanielAvdar@users.noreply.github.com" },
]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
requires-python = ">=3.9,<3.14"

keywords = [
    "python",
    "machine learning",
    "kubeflow"
]
dependencies = [
    "kfp>=2.7.0",
]

[dependency-groups]
dev = [
    "pytest>=7.1.2",
    "hypothesis>=6.23.3",
    "pre-commit>=2.20.0",
    "pytest-cov>=4.0.0",
    "mypy>=0.991",
    "ruff>=0.3.1",
    "kfp>=2.7.0",
    "sybil[pytest]>=1.4.0",
]
docs = [
    "sphinx>=8.2.0; python_version >= '3.11'",
    "sphinx>=7.0.0; python_version < '3.11'",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.hatch.build.targets.sdist]
only-include = ["ml_orchestrator", ]
source = "."

[tool.hatch.build.targets.wheel]
only-include = ["ml_orchestrator", ]
source = "."

[project.optional-dependencies]
editor = ["kfp>=2.7.0"]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.ruff]
line-length = 120
include = [ "tests/**", "ml_orchestrator/**","dummy_components/**","docs/**"]
#exclude = ["docs/**"]

[tool.ruff.lint]
select = ["F", "B", "I", "F", "W", "E", "A", "N","D","DOC"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "DOC"]
"docs/*" = ["D", "DOC"]
"dummy_components/*" = ["D", "DOC"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = false
[tool.pytest.ini_options]
addopts = "-p no:doctest"
